cabal-version:       2.4
name:                heffalump
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/PPK/heffalump#heffalump) for more details.
homepage:            https://github.com/PPK/heffalump
bug-reports:         https://github.com/PPK/heffalump/issues
license:             MIT
license-file:        LICENSE
author:              Avery
maintainer:          Avery <thecommunistduck@hotmail.co.uk>
copyright:           2022 Avery
category:            Parsing
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/PPK/heffalump.git

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , solitude

  mixins:              base hiding (Prelude)
                     , solitude (Solitude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Heffalump

executable heffalump
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       heffalump
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite heffalump-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       heffalump
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
